--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <h1 id="title"> Title</h1>
     <p id="description">description</p>
-    Hello world, We are software deevelopers !!
+    <form id = "survey-form">
+      <label>Name: </label><input type="text" id="name"/>
+    </form>
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
   </body>
