--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p id="description">description</p>
     <form id = "survey-form">
       <label>Name: </label><input type="text" id="name"/>
+      <label>Email:</label><input type="email" id="email"/>
     </form>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
