--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <h1 id="title"> Title</h1>
     <p id="description">description</p>
     <form id = "survey-form">
-      <label>Name: </label><input type="text" id="name"/>
-      <label>Email:</label><input type="email" id="email"/>
+      <label>Name: </label><input type="text" id="name" required/>
+      <label>Email:</label><input type="email" id="email" required/>
+      <label>Phone Number:</label><input type="number" id="number"/>
+
     </form>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
