--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1 id="title"> Title</h1>
     <p id="description">description</p>
     <form id = "survey-form">
-      <label>Name: </label><input type="text" id="name" required/>
-      <label>Email:</label><input type="email" id="email" required/>
-      <label>Phone Number:</label><input type="number" id="number"/>
+      <label id="name-label">Name: </label><input type="text" id="name" required/>
+      <label id="email-label">Email:</label><input type="email" id="email" required/>
+      <label id="number-label">Number:</label><input type="number" id="number" min="1" max="10"/>
 
     </form>
 
