--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <h1 id="title"> Title</h1>
     <p id="description">description</p>
     <form id = "survey-form">
-      <label id="name-label">Name: </label><input type="text" id="name" required/>
-      <label id="email-label">Email:</label><input type="email" id="email" required/>
-      <label id="number-label">Number:</label><input type="number" id="number" min="1" max="10"/>
+      <label id="name-label">Name: </label><input type="text" id="name" required placeholder="enter your name "/>
+      <label id="email-label">Email:</label><input type="email" id="email" required placeholder="enter e-mail"/>
+      <label id="number-label">Number:</label><input type="number" id="number" min="1" max="10" placeholder="enter phone number"/>
+      <label>Select: </label><select id="dropdown">
+        <option>Developer</option>
+        <option>Tester </option>
+      </select>
 
     </form>
 
