--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <option>Developer</option>
         <option>Tester </option>
       </select>
+      <input type="radio" name="group1" value="Option1">Option 1
+      <input type="radio" name="group1" value="Option2">Option 2
+      <input type="radio" name="group1" value="Option3">Option 3
+
+      <input type="checkbox" name="group2" value="Option1">Option 1
+      <input type="checkbox" name="group2" value="Option2">Option 2
+      <input type="checkbox" name="group2" value="Option3">Option 3
 
     </form>
 
