--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <input type="checkbox" name="group2" value="Option2">Option 2
       <input type="checkbox" name="group2" value="Option3">Option 3
 
+      <textarea placeholder="Enter additional comments"></textarea>
+      <button id="submit">Submit</button>
+
     </form>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
