--- a/index.html
+++ b/index.html
@@ -29,15 +29,36 @@
       <option>Tester </option>
     </select>
     </div>
-    <input type="radio" name="group1" value="Option1">Option 1
-    <input type="radio" name="group1" value="Option2">Option 2
-    <input type="radio" name="group1" value="Option3">Option 3
 
-    <input type="checkbox" name="group2" value="Option1">Option 1
-    <input type="checkbox" name="group2" value="Option2">Option 2
-    <input type="checkbox" name="group2" value="Option3">Option 3
+    <div class="form-group">
+      <div class="form-check">
+        <input type="radio" name="group1" value="Option1"  id="option1" class="form-check-input"><label class="form-check-label">Option 1</label>
+        <input type="radio" name="group1" value="Option2" id="option2" class="form-check-input"><label class="form-check-label">Option 2</label>
+        <input type="radio" name="group1" value="Option3"  id="option3" class="form-check-input"><label class="form-check-label" id="option3">Option 3</label>
+      </div>
+    </div>
+    
 
-    <textarea placeholder="Enter additional comments"></textarea>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" name="group2" value="Option1"/>
+        <label class="form-check-label" for="exampleRadios1">
+          Option 1
+        </label>
+        <input class="form-check-input" type="checkbox" name="group2" value="Option1"/>
+        <label class="form-check-label" for="option2" name="group2" value="option2">
+          Option 2
+        </label>
+        <input class="form-check-input" type="checkbox" name="group2" value="Option1"/>
+        <label class="form-check-label" for="option3" name="group2" value="option3">
+          Option 3
+        </label>
+      </div>
+    
+  
+  <div class="form-group">
+    Enter text:
+    <textarea class="form-control" placeholder="Enter additional comments" rows="3"></textarea>
+    </div>
     <button id="submit" class="btn btn-primary">Submit</button>
 
   </form>
