--- a/index.html
+++ b/index.html
@@ -14,50 +14,63 @@
   <p id="description">description</p>
   <form id="survey-form">
     <div class="form-group">
-      <label id="name-label">Name: </label><input type="text" id="name" class="form-control"  required placeholder="enter your name " />
+      <label id="name-label">Name: </label><input type="text" id="name" class="form-control" required
+        placeholder="enter your name " />
     </div>
     <div class="form-group">
-      <label id="email-label">Email:</label><input type="email" id="email" class="form-control"  required placeholder="enter e-mail" />
+      <label id="email-label">Email:</label><input type="email" id="email" class="form-control" required
+        placeholder="enter e-mail" />
     </div>
     <div class="form-group">
-      <label id="number-label">Number:</label><input type="number" id="number" class="form-control"  min="1" max="10"
+      <label id="number-label">Number:</label><input type="number" id="number" class="form-control" min="1" max="10"
         placeholder="enter phone number" />
     </div>
     <div class="form-group">
-        <label>Select: </label><select id="dropdown" class="form-control">
-      <option>Developer</option>
-      <option>Tester </option>
-    </select>
+      <label>Select: </label><select id="dropdown" class="form-control">
+        <option>Developer</option>
+        <option>Tester </option>
+      </select>
     </div>
 
     <div class="form-group">
       <div class="form-check">
-        <input type="radio" name="group1" value="Option1"  id="option1" class="form-check-input"><label class="form-check-label">Option 1</label>
-        <input type="radio" name="group1" value="Option2" id="option2" class="form-check-input"><label class="form-check-label">Option 2</label>
-        <input type="radio" name="group1" value="Option3"  id="option3" class="form-check-input"><label class="form-check-label" id="option3">Option 3</label>
+        <input type="radio" name="group1" value="Option1" class="form-check-input"><label
+          class="form-check-label">Option 1</label>
+      </div>
+      <div class="form-check">
+        <input type="radio" name="group1" value="Option2" class="form-check-input"><label
+          class="form-check-label">Option 2</label>
+      </div>
+      <div class="form-check">
+        <input type="radio" name="group1" value="Option3" class="form-check-input"><label
+          class="form-check-label">Option 3</label>
       </div>
     </div>
-    
 
+    <div class="form-group">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" name="group2" value="Option1"/>
+        <input class="form-check-input" type="checkbox" name="group2" value="Option1" />
         <label class="form-check-label" for="exampleRadios1">
           Option 1
         </label>
-        <input class="form-check-input" type="checkbox" name="group2" value="Option1"/>
-        <label class="form-check-label" for="option2" name="group2" value="option2">
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" name="group2" value="Option1" />
+        <label class="form-check-label">
           Option 2
         </label>
-        <input class="form-check-input" type="checkbox" name="group2" value="Option1"/>
-        <label class="form-check-label" for="option3" name="group2" value="option3">
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" name="group2" value="Option1" />
+        <label class="form-check-label" >
           Option 3
         </label>
       </div>
-    
-  
-  <div class="form-group">
-    Enter text:
-    <textarea class="form-control" placeholder="Enter additional comments" rows="3"></textarea>
+    </div>
+
+    <div class="form-group">
+      Enter text:
+      <textarea class="form-control" placeholder="Enter additional comments" rows="3"></textarea>
     </div>
     <button id="submit" class="btn btn-primary">Submit</button>
 
